--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -30,7 +30,7 @@
     "daisyui": "^4.7.3",
     "ethers": "^6.12.0",
     "get-starknet-core": "^4.0.0",
-    "next": "14.1.3",
+    "next": "^14.2.24",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
     "prettier": "^3.4.2",
@@ -65,7 +65,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
-    "vercel": "^33.7.1",
+    "vercel": "^41.2.0",
     "vitest": "^2.1.1",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
