--- a/packages/snfoundry/contracts/Scarb.toml
+++ b/packages/snfoundry/contracts/Scarb.toml
@@ -31,3 +31,7 @@ block_id.tag = "latest"
 
 [tool.snforge]
 exit_first = true
+
+[profile.dev.cairo]
+unstable-add-statements-code-locations-debug-info = true
+inlining-strategy = "avoid"
