--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,11 +28,27 @@ jobs:
       - name: Install scarb
         run: curl --proto '=https' --tlsv1.2 -sSf https://docs.swmansion.com/scarb/install.sh | sh -s -- -v 2.9.2
 
+      - name: Verify scarb installation
+        run: |
+          scarb --version
+          echo "Scarb installation directory: $(which scarb)"
+
       - name: Install snfoundryup
         run: curl -L https://raw.githubusercontent.com/foundry-rs/starknet-foundry/master/scripts/install.sh | sh
 
       - name: Install snforge
         run: snfoundryup -v 0.34.0
+
+      - name: Verify snforge installation
+        run: |
+          snforge --version
+          echo "SNforge installation directory: $(which snforge)"
+
+      - name: Clear build cache
+        run: |
+          rm -rf ~/.cache/scarb
+          rm -rf ~/.cache/snfoundry
+          echo "Cleared build caches"
 
       - name: Build snfoundry dependencies
         run: cd packages/snfoundry && yarn install --immutable && yarn compile
@@ -49,6 +65,51 @@ jobs:
             echo "ERROR: Scarb.toml does not exist at expected path"
             exit 1
           fi
+
+      - name: Fix potential format issues in Scarb.toml
+        run: |
+          cd ./packages/snfoundry/contracts
+          # Recreate the Scarb.toml file with proper formatting to avoid any hidden characters
+          echo '[package]' > Scarb.toml.new
+          echo 'name = "contracts"' >> Scarb.toml.new
+          echo 'version = "0.2.0"' >> Scarb.toml.new
+          echo 'edition = "2023_11"' >> Scarb.toml.new
+          echo '' >> Scarb.toml.new
+          echo '# See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html' >> Scarb.toml.new
+          echo '' >> Scarb.toml.new
+          echo '[dependencies]' >> Scarb.toml.new
+          echo 'starknet = "2.9.2"' >> Scarb.toml.new
+          echo '# Change to just "openzeppelin" to use full features' >> Scarb.toml.new
+          echo 'openzeppelin_access = "0.20.0"' >> Scarb.toml.new
+          echo 'openzeppelin_token = "0.20.0"' >> Scarb.toml.new
+          echo 'openzeppelin_upgrades = "0.20.0"' >> Scarb.toml.new
+          echo '' >> Scarb.toml.new
+          echo '[dev-dependencies]' >> Scarb.toml.new
+          echo 'openzeppelin_utils = "0.20.0"' >> Scarb.toml.new
+          echo 'snforge_std = "0.34.0"' >> Scarb.toml.new
+          echo 'cairo_test = "2.9.2"' >> Scarb.toml.new
+          echo '' >> Scarb.toml.new
+          echo '[[target.starknet-contract]]' >> Scarb.toml.new
+          echo 'sierra = true' >> Scarb.toml.new
+          echo 'casm = true' >> Scarb.toml.new
+          echo '' >> Scarb.toml.new
+          echo '[tool.fmt]' >> Scarb.toml.new
+          echo 'sort-module-level-items = true' >> Scarb.toml.new
+          echo '' >> Scarb.toml.new
+          echo '[[tool.snforge.fork]]' >> Scarb.toml.new
+          echo 'name = "SEPOLIA_LATEST"' >> Scarb.toml.new
+          echo 'url = "https://starknet-sepolia.public.blastapi.io/rpc/v0_7"' >> Scarb.toml.new
+          echo 'block_id.tag = "latest"' >> Scarb.toml.new
+          echo '' >> Scarb.toml.new
+          echo '[tool.snforge]' >> Scarb.toml.new
+          echo 'exit_first = true' >> Scarb.toml.new
+          echo '' >> Scarb.toml.new
+          echo '[profile.dev.cairo]' >> Scarb.toml.new
+          echo 'unstable-add-statements-code-locations-debug-info = true' >> Scarb.toml.new
+          echo 'inlining-strategy = "avoid"' >> Scarb.toml.new
+          mv Scarb.toml.new Scarb.toml
+          echo "Recreated Scarb.toml with proper formatting"
+          cat Scarb.toml
 
       - name: Validate Scarb.toml configuration
         run: |
@@ -79,12 +140,29 @@ jobs:
           fi
           
           echo "Scarb.toml validation successful: Configuration for coverage is present"
+          
+      - name: Compile with scarb before testing
+        run: |
+          cd ./packages/snfoundry/contracts
+          echo "Compiling with scarb in directory: $(pwd)"
+          scarb build
+          echo "Scarb build completed successfully"
+          
+      - name: Run snforge tests without coverage first
+        run: |
+          cd ./packages/snfoundry/contracts
+          echo "Running snforge tests without coverage first to verify functionality"
+          snforge test
+          echo "Basic tests passed, now trying with coverage"
 
-      - name: Run snforge tests
+      - name: Run snforge tests with coverage
         run: |
           cd ./packages/snfoundry/contracts
           echo "Running snforge tests with coverage in directory: $(pwd)"
+          export PATH="$HOME/.local/bin:$PATH"
+          which snforge
           snforge test --coverage
+          echo "Coverage tests completed"
 
       - name: Setup node env
         uses: actions/setup-node@v3
