--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -113,9 +113,8 @@ jobs:
           LOG_PATH=$(find /tmp -type f -name "build.log" -print -quit) # Busca el primer archivo llamado build.log
           if [ -z "$LOG_PATH" ]; then
             echo "::warning::Next.js build log (build.log) not found in /tmp or its subdirectories."
-            # Si necesitas depurar porque el log no se encuentra, puedes listar el contenido de /tmp:
-            # echo "Listing contents of /tmp:"
-            # find /tmp -ls
+            echo "Listing contents of /tmp for debugging:"
+            find /tmp -ls # <--- ESTA LÍNEA ES LA MODIFICACIÓN IMPORTANTE
             echo "log_file_path=" >> $GITHUB_ENV # Establece una ruta vacía para que el siguiente paso no falle si el log no existe
           else
             echo "Found Next.js build log at: $LOG_PATH"
@@ -124,7 +123,7 @@ jobs:
 
       - name: Upload Next.js build log on failure
         if: failure() && env.log_file_path != '' # Solo intentar subir si se encontró una ruta de log
-        uses: actions/upload-artifact@v3.1.3
+        uses: actions/upload-artifact@v3
         with:
           name: nextjs-build-log
           path: ${{ env.log_file_path }}
