--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -91,5 +91,9 @@
     "react": "^18.0.0 || ^19.0.0",
     "react-dom": "^18.0.0 || ^19.0.0",
     "webpack": "^5.0.0"
+  },
+  "resolutions": {
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   }
 }
