--- a/packages/snfoundry/contracts/Scarb.toml
+++ b/packages/snfoundry/contracts/Scarb.toml
@@ -18,7 +18,7 @@ openzeppelin_upgrades = "1.0.0"
 openzeppelin_utils = "1.0.0"
 openzeppelin_testing = "3.0.0"
 snforge_std = "0.41.0"
-cairo_test = "2.9.2"
+cairo_test = "2.11.4"
 
 [[target.starknet-contract]]
 casm = true # taggle this to `false` to speed up compilation/script tests
@@ -35,6 +35,7 @@ block_id.tag = "latest"
 [tool.snforge]
 exit_first = true
 
-[profile.dev.cairo]
-unstable-add-statements-code-locations-debug-info = true
-inlining-strategy = "avoid"
+[tool.scarb]
+allow-prebuilt-plugins = [
+	"snforge_std",
+] # Avoids the need to install Rust for snforge_std/starknet-foundry
