--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -51,6 +51,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
+    "recharts": "^2.15.3",
     "starknet": "^7.1.0",
     "tailwind-merge": "^3.0.2",
     "type-fest": "^4.6.0",
